fixed screenreader-class to offscreen text

--- a/style.css
+++ b/style.css
@@ -33,8 +33,13 @@
   }
 
   .screenreader{
-  display: none;
-  }
+		position:absolute;
+		left:-10000px;
+		top:auto;
+		width:1px;
+		height:1px;
+		overflow:hidden;
+	}
 
   .boat {
     width: 60%;
